--- a/react_assign/package.json
+++ b/react_assign/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "enzyme": "^3.11.0",
     "json-loader": "^0.5.7"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
